--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -19,6 +21,10 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  <meta name="google-signin-client_id"
+    content="603932020218-hom5uk6mbjm1dnet8ufvp4r5is62r4of.apps.googleusercontent.com">
+
+
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -27,16 +33,36 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
   <script>
+
+    var firebaseConfig = {
+      apiKey: "AIzaSyAj2NXBio4tF8k4Fsl_EpRGe-O3mKPmx4Q",
+      authDomain: "fluttertest-bcdba.firebaseapp.com",
+      projectId: "fluttertest-bcdba",
+      storageBucket: "fluttertest-bcdba.appspot.com",
+      messagingSenderId: "603932020218",
+      appId: "1:603932020218:web:3f6650a17982edb87ea843",
+      measurementId: "G-VWP1SERN8C"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    // Initialize Firebase
+
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
@@ -101,4 +127,5 @@
     }
   </script>
 </body>
+
 </html>
